[TASK] removed dependency to phpoffice/phpexcel
The dependency prevents Typo3 Flow from compiling

Change-Id: I9553b03662dbf3942b7078538eefe29e5568f56e

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 	"require":{
 		"php": "> 5.3.0",
 		"Psr/Log": "~1.0",
-		"phpoffice/phpexcel": "1.7.9",
 		"symfony/expression-language": "2.4.*"
+	},
+	"suggest": {
+		"phpoffice/phpexcel": "Allows more advanced logging of the application flow"
 	}
 }
