--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require":{
 		"php": "> 5.3.0",
 		"Psr/Log": "~1.0",
-		"symfony/expression-language": "2.4.*"
+		"symfony/expression-language": "2.4.*",
+		"phpoffice/phpexcel": "1.7.9"
 	},
 	"suggest": {
 		"phpoffice/phpexcel": "Allows more advanced logging of the application flow"
