--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
 	"require":{
 		"php": "> 5.3.0",
 		"Psr/Log": "~1.0",
-		"symfony/expression-language": "2.4.*",
-		"phpoffice/phpexcel": "1.7.9"
+		"symfony/expression-language": "2.4.*"
 	},
 	"suggest": {
 		"phpoffice/phpexcel": "Allows more advanced logging of the application flow"
