--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
 	"name": "networkteam/import",
-	"version": "1.0.0-beta",
+	"description": "Generic import framework",
+	"keywords": ["import", "dataprovider", "excel", "csv"],
+	"config": {
+        "bin-dir": "bin"
+    },
 	"autoload": {
 		"psr-0": { "Networkteam\\": "lib" }
 	},
@@ -10,6 +14,12 @@
 		"symfony/expression-language": "2.4.*"
 	},
 	"suggest": {
-		"phpoffice/phpexcel": "Allows more advanced logging of the application flow"
+		"phpoffice/phpexcel": "Used by the ExcelDataProvider to import Excel files"
+	},
+	"require-dev": {
+		"mockery/mockery": "0.9.*",
+		"phpunit/phpunit": "~4.0.20",
+		"phpoffice/phpexcel": "~1.8.0",
+		"doctrine/orm": "~2.2,>=2.2.3"
 	}
 }
