Increased version constraint symfony/expression
To be able to use this package in actual symfony
the expression language needs to be greater then ~2.4

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	"require":{
 		"php": "> 5.3.0",
 		"Psr/Log": "~1.0",
-		"symfony/expression-language": "2.4.*"
+		"symfony/expression-language": "~2.4"
 	},
 	"suggest": {
 		"phpoffice/phpexcel": "Used by the ExcelDataProvider to import Excel files"
