--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"require-dev": {
 		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~4.0.20",
-		"phpoffice/phpexcel": "~1.8.0",
-		"doctrine/orm": "~2.2,>=2.2.3"
+		"doctrine/orm": "~2.2,>=2.2.3",
+		"phpoffice/phpspreadsheet": "^1.2.1"
 	}
 }
