--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	},
 	"require":{
 		"php": "> 5.3.0",
-		"Psr/Log": "~1.0",
+		"psr/log": "~1.0",
 		"symfony/expression-language": "~2.4"
 	},
 	"suggest": {
