--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,20 +10,19 @@
 		convertWarningsToExceptions="true"
 		processIsolation="false"
 		stopOnFailure="false"
-		syntaxCheck="false"
 		bootstrap="vendor/autoload.php">
 
 	<testsuites>
 		<testsuite name="Project Test Suite">
-			<directory>lib/Networkteam/Import/Tests</directory>
+			<directory>tests</directory>
 		</testsuite>
 	</testsuites>
 
 	<filter>
 		<whitelist>
-			<directory>lib/</directory>
+			<directory>src</directory>
 			<exclude>
-				<directory>lib/Networkteam/Import/Tests/</directory>
+				<directory>tests</directory>
 			</exclude>
 		</whitelist>
 	</filter>
