--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-pdo": "*",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "~8.5.2",
-        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/orm": ">=2.4.0",
         "phpoffice/phpspreadsheet": "^1.2.1"
     }
 }
